# neoLAT

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  setup_env.sh
.github/workflows/: docs.yml
docs/: agents.md  core_concepts.md  experiments.md  getting_started.md  index.md  results.md  tasks.md
docs/javascripts/: footer_custom.js
neolat/analysis/: report.py
toy_experiment/dashboard/: viewer.py
toy_experiment/dashboard/templates/: dashboard.html
toy_experiment/docs/: research_report.md  tutorial.md
toy_experiment/sensor/: debug_somatic.py  debug_vm.py  neoray_logger.py  somatic_poc.py
